# NetflixGPT

./: .gitignore  LICENSE  README.md  package-lock.json  package.json  project.code-workspace  tailwind.config.js  tsconfig.json  webpack.config.js
client/: package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  webpack.config.js
client/est/: manifest.json
client/src/: background.bundle.js  manifest.json
client/src/components/: Auth.tsx  ChatBox.tsx  Login.tsx  Logout.tsx  SearchButton.tsx
client/src/pages/Background/: index.ts
client/src/pages/Content/: index.ts
client/src/pages/Content/modules/: subtitles.ts
client/src/pages/Popup/: Popup.css  Popup.tsx  index.tsx
client/src/services/: WatchState.ts
client/src/utils/: dom.ts
data/: netflix_bb.json  netflix_bcs.json  netflix_death_note.json  prompt.json  prompt.txt  suits_pilot_plot.txt
scripts/: agent.ipynb  requirements.txt
server/: config.py  constants.py  dump.rdb  main.py  package-lock.json  package.json  pyproject.toml  requirements.txt  test_main.py
server/app/: __db.py  auth.py  crud.py  database.py  db.py  models.py  ner.py  scraper.py  server.py  tasks.py  utils.py  vecstore.py
server/app/agent/: agent.py
server/app/models/: auth.py  conversation.py  crunchyroll.py  episode.py  message.py  metadata.py  netflix.py  question.py  scraper.py  source.py  summary.py  title.py  title_source.py  user.py
server/app/providers/: crunchyroll.py  netflix.py
server/data/: prompt.json  prompt.txt  qna.json  qna.txt  validate.json  validate.txt  verify_source.json  verify_source.txt
server/scripts/: clean.py  create_db.py  read_data.py  scrape_test.py  suits_episodes.py  visualize_db.py
server/scripts/db/: chroma-collections.parquet
server/src/: agent.ipynb  agent.py  db.py  llm_scraper.py  procedural.py  scraper.py  server.py
server/tests/: test_auth.py  test_ep_nums.py  test_fandom_find.py  test_fandom_scrape.py  test_ner.py  test_scrape_speeds.py
src/: manifest.json
src/components/: ChatBox.tsx  SearchButton.tsx
src/pages/Background/: index.js  index.ts
src/pages/Content/: index.ts
src/pages/Popup/: ChatBox.tsx  Popup.css  Popup.tsx  index.tsx
src/services/: WatchState.ts
