[tool.poetry]
name = "netflixgpt"
version = "0.1.0"
description = ""
authors = ["Shrey Pandya <shrey150@yahoo.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "^1.0.0"
openai = "^1.30.1"
google-search-results = "^2.4.2"
wikipedia = "^1.4.0"
langchain = "^0.2.0"
pywikibot = "^8.3.0"
mwparserfromhell = "^0.6.4"
fastapi = "^0.100.0"
uvicorn = "^0.23.2"
tiktoken = "^0.7.0"
sentence-transformers = "^2.2.2"
urllib3 = "1.26.6"
sqlalchemy = "^2.0.19"
authlib = "^1.2.1"
httpx = "^0.24.1"
itsdangerous = "^2.1.2"
sqlmodel = "^0.0.16"
psycopg = {extras = ["binary"], version = "^3.1.19"}
greenlet = "^3.0.3"
asyncpg = "^0.29.0"
pydantic = {extras = ["email"], version = "^2.7.1"}
langchain-community = "^0.2.0"
langchain-core = "^0.2.0"
langchain-openai = "^0.1.7"
pydantic-settings = "^2.2.1"
tldextract = "^5.1.2"
fastcrud = "^0.12.1"
celery = "^5.4.0"
redis = "^5.0.4"
html5lib = "^1.1"
spacy = "^3.5.0"
typer = "0.4.1"
setuptools = "^67.6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
